--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-@import url('abstracts/webfont.css');
+@import url('abstracts/webfonts.css');
 @import url('abstracts/variables.css');
 @import url('abstracts/keyframes.css');
 
