--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,49 +12,13 @@ iframe,img,video {width:100%;} /*img {vertical-align:middle;}*/
 h1,h2,h3,h4,h5,h6 {line-height:1.4;font-weight:bold;color:var(--gray800);word-break:keep-all;}
 strong,b,th,legend {font-weight:bold;color:var(--gray800);} legend {margin:0 0 .5rem 0;}
 cite,i,address,em,dfn {font-style:normal;} em {color:var(--color-primary);}
-small {font-size:$caption;} abbr {text-decoration:none;}
+small {font-size:var} abbr {text-decoration:none;}
 a {text-decoration:none;text-decoration-skip-ink:auto;color:var(--color-primary);} a:link,a:visited {} a:hover,a:focus {} a:active {}
-mark {padding:0 2px 2px;border-radius:var(--radius400);background:var(--gray200);}
 /* // br {content:'';display:block;height:1rem;} */
 hr {height:1px;margin:1rem 0;background:var(--gray200);overflow:visible;position:relative;}
-u {text-decoration:none;position:relative;}
-u:after {content:'';height:.6em;border-radius:var(--radius400);background:antiquewhite;position:absolute;left:-.25rem;right:-.25rem;bottom:-.25rem;z-index:-1;}
-code {padding:1rem 1.5rem;background:var(--gray100);border-radius:var(--radius400);font-family:'consolas'}
-pre {padding:1rem;background:var(--gray100);font-family:'consolas';white-space:normal;}
-
-del {color:var(--gray400);} ins {text-decoration:none;}
 
 html {min-width:320px;height:100%;font:16px/1.8 var(--fontstack);color:var(--gray800);-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;overscroll-behavior:contain;overflow-x:hidden;}
 body {background:var(--gray0);overflow-x:hidden;letter-spacing:-.0125rem;}
-
-blockquote {margin:1rem 0 2rem;padding:0 1rem;border-left:4px solid var(--gray200);border-radius:var(--radius400);color:var(--gray400)}
-
-table {width:100%;border-collapse:collapse;border-spacing:0;border-left-style:hidden;border-right-style:hidden;}
-table caption {padding:.5rem 0;font-size:$caption;text-align:left;}
-table thead tr {}
-table thead tr th {padding:.5rem 0;line-height:1.4;color:var(--gray400);text-align:left;}
-table tbody tr th {padding:.5rem 0;line-height:1.4;vertical-align:top;text-align:left;}
-table tbody tr td {padding:1rem 0;border-top:var(--border100);border-bottom:var(--border100);box-sizing:border-box;line-height:1.4;}
-table tbody tr:hover {background:var(--gray100);}
-table .right {text-align:right;}
-
-ul {}
-ul li {margin:.25rem 0;padding:0 0 0  1.25rem;position:relative;}
-ul li:before {content:'\25AA';position:absolute;left:0;}
-ul li ul {margin:0 0 .5rem 0;}
-ul li ul li {}
-ul li ul li:before {content:'';border-radius:var(--radius400);}
-
-ol {}
-ol li {margin:.25rem 0;padding: 0 0 0 1.25rem;position:relative;counter-increment:listitem;}
-ol li:before {content: counter(listitem) '.';position:absolute;left:0;}
-ol li ol {margin:0 0 .5rem 0;}
-ol li ol li {counter-increment:sub-list-item;}
-ol li ol li:before {content: counter(sub-list-item,lower-alpha) '.';}
-
-dl {display:flex;flex-wrap:wrap;}
-dl dt {width:8rem;color:var(--gray400);}
-dl dd {width:calc(100% - 8rem);}
 
 svg {color:var(--gray800);}
 
@@ -71,9 +35,6 @@ button {
   color: inherit;
   cursor: pointer;
 }
-
-
-
 
 
 .navbar {display:flex;align-items:center;justify-content:space-between;height:var(--navbar-height);padding:0 2rem;border-bottom:1px solid #fafafa;background:var(--gray0);position:fixed;left:0;right:0;top:0;z-index:8;transition:all .4s;}
@@ -328,7 +289,7 @@ button {
   .align-half .home-tabpanel-section-title {padding-left:0;}
   .align-half .home-tabpanel-section-description {margin-bottom:4rem;padding-left:0;}
   .home-tabpanel-section-media {margin-left:auto;margin-right:auto;position:static !important;}
-  .home-tabpanel-section-inner > div {margin-left:auto;margin-right:auto;position:static !important;}
+  /* .home-tabpanel-section-inner > div {margin-left:auto;margin-right:auto;position:static !important;} */
 
   .footer-inner {display:block;}
   .footer-socials {margin:2rem 0 0 -1rem;}
