--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,6 +36,10 @@ button {
   cursor: pointer;
 }
 
+:root {
+  --animation-delay-second: .8s;
+  --animation-delay-third: .8s;
+}
 
 .navbar {display:flex;align-items:center;justify-content:space-between;height:var(--navbar-height);padding:0 2rem;border-bottom:1px solid #fafafa;background:var(--gray0);position:fixed;left:0;right:0;top:0;z-index:8;transition:all .4s;}
 .navbar-logo {width:96px;}
@@ -44,7 +48,6 @@ button {
 .navbar-menu-item {padding:0 1rem;color:var(--gray700);position:relative;z-index:1;}
 .navbar-menu-item.is-active {color:var(--gray999);font-weight:var(--weight-bold);}
 .navbar.is-fixed {position:fixed;left:0;right:0;top:0;}
-
 
 .is-navbar-up .navbar {transform:translateY(calc(-1 * var(--navbar-height)));}
 /* .is-navbar-up .navbar {transform:translateY(-1 * var(--navbar-height));} */
@@ -58,11 +61,11 @@ button {
 .hero-description {}
 .hero-cta {display:flex;align-items:center;justify-content:center;width:241px;height:45px;margin:2rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);}
 
-.hero-object-group {height:100%;position:absolute;right:0;top:0;}
+.hero-object-group {height:100%;position:absolute;right:-4rem;top:-8rem;}
 .hero-object-group-inner {position:relative;}
-.hero-object1 {width:100%;max-width:635px;position:relative;right:-30rem;top:-16rem;z-index:3;animation:hero-object1 10s ease infinite;}
-.hero-object2 {width:100%;max-width:930px;position:relative;right:-120px;top:-48rem;z-index:2;animation:hero-object1 20s ease infinite;}
-.hero-object3 {width:100%;max-width:750px;position:relative;right:-10rem;top:-76rem;z-index:1;animation:hero-object1 16s ease infinite;}
+.hero-object1 {width:100%;max-width:635px;position:absolute;right:0;top:-8rem;z-index:3;animation:hero-object1 10s ease infinite;}
+.hero-object2 {width:100%;max-width:930px;position:relative;z-index:2;animation:hero-object1 20s ease infinite;}
+.hero-object3 {width:100%;max-width:750px;position:absolute;right:8rem;bottom:-18rem;z-index:1;animation:hero-object1 16s ease infinite;}
 
 
 
@@ -85,7 +88,6 @@ button {
 .home-tabpanel-section-inner {max-width:var(--width-large);margin:0 auto;padding:18rem var(--grid-margin);position:relative;}
 .home-tabpanel-section-title {margin:0 0 1.5rem 0;font-size:var(--title);opacity:0;}
 .home-tabpanel-section-description {opacity:0;}
-.home-tabpanel-section-media {opacity:0;}
 .home-tabpanel-section-media video {margin:3rem 0 0 0;}
 
 .home-tabpanel-section-background {position:absolute;left:0;right:0;top:0;bottom:0;}
@@ -113,31 +115,36 @@ button {
 .home-tabpanel[date-index=3] {}
 .home-tabpanel[date-index=4] {}
 
+
+
+/* ! observer */
+
 .is-observed {}
-.is-observed .home-tabpanel-section-title {animation:fadeup .4s forwards;}
-.is-observed .home-tabpanel-section-description {animation:fadeup .4s .4s forwards;}
-.is-observed .home-tabpanel-section-media {animation:fadeup .4s 1s forwards;}
+.is-observed .home-tabpanel-section-title {animation:fadeup .4s both;}
+.is-observed .home-tabpanel-section-description {animation:fadeup .4s .4s both;}
+.is-observed .home-tabpanel-section-media {animation:fadeup .4s 1s both;}
 
 /* todo 네스팅 네이밍 너무 복잡해짐 */
 .tabpanel1-3-wrap {transition:all 20s;position:absolute;left:0;right:0;top:0;bottom:0;transform:translateX(-50%);}
 
-.tabpanel1-3-wrap .home-tabpanel-section-media {position:absolute;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(1) {left:1rem;top:-2rem;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(2) {left:24rem;top:4rem;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(3) {left:8rem;top:8rem;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(4) {left:12rem;top:12rem;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(5) {left:18rem;top:6rem;}
-.tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(6) {left:8rem;top:2rem;}
-.is-observed .tabpanel1-3-wrap * {animation:none;}
+.tabpanel1-3-wrap img {position:absolute;}
+.tabpanel1-3-wrap img:nth-of-type(1) {left:1rem;top:-2rem;}
+.tabpanel1-3-wrap img:nth-of-type(2) {left:24rem;top:4rem;}
+.tabpanel1-3-wrap img:nth-of-type(3) {left:8rem;top:8rem;}
+.tabpanel1-3-wrap img:nth-of-type(4) {left:12rem;top:12rem;}
+.tabpanel1-3-wrap img:nth-of-type(5) {left:18rem;top:6rem;}
+.tabpanel1-3-wrap img:nth-of-type(6) {left:8rem;top:2rem;}
+
 .tabpanel1-3-o {max-width:14px;margin:6rem;opacity:1;}
 .tabpanel1-3-x {max-width:20px;margin:6rem;opacity:1;}
+
 .is-observed .tabpanel1-3-o {animation:temp 16s infinite forwards;animation-delay:2;}
 .is-observed .tabpanel1-3-x {animation:temp 16s infinite forwards;animation-delay:3;}
 
-.is-observed .tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(1) {animation-duration:16s;}
-.is-observed .tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(2) {animation-duration:20s;}
-.is-observed .tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(3) {animation-duration:24s;}
-.is-observed .tabpanel1-3-wrap .home-tabpanel-section-media:nth-of-type(3) {animation-duration:22s;}
+.is-observed .tabpanel1-3-wrap img:nth-of-type(1) {animation-duration:16s;}
+.is-observed .tabpanel1-3-wrap img:nth-of-type(2) {animation-duration:20s;}
+.is-observed .tabpanel1-3-wrap img:nth-of-type(3) {animation-duration:24s;}
+.is-observed .tabpanel1-3-wrap img:nth-of-type(3) {animation-duration:22s;}
 @keyframes temp {
   0% {}
   50% {}
@@ -148,27 +155,19 @@ button {
 }
 
 /* todo important 트랜스폼 애니메이션 있느 ㄴ경우 */
-.tabpanel1-4-wrap {width:100%;max-width:582px;padding:2rem;box-sizing:border-box;position:absolute;}
-.tabpanel1-4-wrap .home-tabpanel-section-media {
-  width:100%;height:594px;margin:4rem 0;overflow:hidden;position:relative;
-}
-.tabpanel1-4-wrap .question {position:relative;}
-.tabpanel1-4-wrap .question .bookmark {max-width:68px;position:absolute;right:5%;top:21%;animation:bookmark .6s both;}
+.tabpanel1-4-wrap {width:100%;max-width:582px;padding:0 2rem;box-sizing:border-box;overflow:hidden;position:absolute;}
+.tabpanel1-4-wrap-inbox {height:594px;position:relative;}
+.tabpanel1-4-wrap .viewer {position: absolute;animation:test 14s ease .8s;}
 
-/* .is-observed .tabpanel1-4-wrap .question .bookmark {transform:scale(1)} */
+.tabpanel1-4-wrap .question {position:relative;}
+.tabpanel1-4-wrap .question .bookmark {max-width:68px;position:absolute;right:5%;top:21%;animation:bookmark .2s linear both;}
+
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(1) .bookmark {animation-delay:2s;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(2) .bookmark {animation-delay:3s;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(3) .bookmark {animation-delay:5s;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(4) .bookmark {animation-delay:6s;}
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(5) .bookmark {animation-delay:9s;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(5) .bookmark {animation-delay:8s;}
 
-
-
-.animation {
-  animation:test 14s ease .8s;
-  position: relative;
-  z-index: 0;
-}
 .before-blur {
   height: 4rem;
   background: linear-gradient(to top, rgba(52,50,50,0), rgba(52,50,50,.75));
@@ -198,7 +197,7 @@ button {
   100% {transform:scale(1)}
 }
 
-
+/*  todo 왼쪽 정렬 absolute */
 .tabpanel2-1-wrap {position:absolute;}
 .tabpanel2-1-wrap * {transition:all .6s;}
 .tabpanel2-1-1 {max-width:530px;position:absolute;left:10px;top:10px;transform:scale(.5);}
@@ -209,17 +208,11 @@ button {
 
 .tabpanel2-2-1 {max-width:560px;position:absolute;}
 
-
-:root {
-  --animation-delay-second: .8s;
-  --animation-delay-third: .8s;
-}
-.tabpanel2-5-wrap {position:absolute;}
-.tabpanel2-5-1 {margin:2.5rem 0 0 2rem;position:absolute;z-index:1;}
+.tabpanel2-5-wrap {position:absolute;animation:none !important;}
+.tabpanel2-5-1 {margin:2.5rem 0 0 2rem;position:absolute;z-index:1;animation:fadeup .4s 1s both;animation-delay:1.8s;}
 .tabpanel2-5-2 {max-width:533px;transition:all .4s;opacity:0;}
-.is-observed .tabpanel2-5-wrap .tabpanel2-5-2 {animation:0;}
-.is-observed .tabpanel2-5-1 {animation-delay:1.8s;}
-.is-observed .tabpanel2-5-2 {transition-delay:1.2s;opacity:.2;}
+.is-observed .tabpanel2-5-1 {}
+.is-observed .tabpanel2-5-2 {transition-delay:1.4s;opacity:.2;}
 
 .tabpanel3-1-1 {max-width:749px;margin:4rem auto 0;}
 
@@ -227,24 +220,23 @@ button {
 .tabpanel3-2-1 {max-width:645px;}
 .tabpanel3-2-2 {max-width:645px;position:absolute;right:0;top:158px;}
 
-.tabpanel3-4-wrap {position:absolute;}
-.tabpanel3-4-wrap * {animation:0;}
+.tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:0;}
 .tabpanel3-4-1 {max-width:582px;}
-.tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;}
-.tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);} 
+.tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;animation:fadeup .4s 1s both;}
+.tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);animation:fadeup .4s 1s both;} 
 /*  */
 .is-observed .tabpanel3-4-2 {animation-delay:1.8s;}
 .is-observed .tabpanel3-4-3 {animation-delay:1.4s;}
 
 /* todo size  % */
-.tabpanel4-1-wrap {width:100%;max-width:612px;height:586px;position:absolute;}
-.tabpanel4-1-wrap * {animation:none}
+.tabpanel4-1-wrap {width:100%;max-width:612px;height:586px;position:absolute;animation:none;}
 .is-observed .tabpanel4-1-1 {max-width:271px;position:absolute;left:0;top:0;position:2;}
-.is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;position:3;animation-delay:1.4s;}
-.is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:20px;bottom:20px;position:1;animation-delay:1.8s;}
+.is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;position:3;animation:fadeup .4s 1.4s both;}
+.is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:20px;bottom:20px;position:1;animation:fadeup .4s 1.8s both;}
 
 
 .tabpanel4-2-wrap {display:flex;justify-content:center;margin-bottom:-24rem;transform:translateY(20rem);transition:transform .8s 1s;opacity:1;}
+/* 그냥 똑같이 올라오면 되는 듯 */
 .tabpanel4-2-wrap * {animation:none;}
 .tabpanel4-2-1 {width:30%;max-width:585px;}
 .tabpanel4-2-2 {width:30%;max-width:585px;}
@@ -289,11 +281,12 @@ button {
   .hero-object-group-inner {}
 
   /* .align-centered .home-tabpanel-section-inner {padding:7.5rem 0;} */
-  .align-half .home-tabpanel-section-inner {display:block;text-align:center;}
-  .align-half .home-tabpanel-section-title {padding-left:0;}
-  .align-half .home-tabpanel-section-description {margin-bottom:4rem;padding-left:0;}
-  .home-tabpanel-section-media {margin-left:auto;margin-right:auto;position:static !important;}
-  /* .home-tabpanel-section-inner > div {margin-left:auto;margin-right:auto;position:static !important;} */
+  .align-half .home-tabpanel-section-inner {justify-content:center;text-align:center;}
+  .align-half .home-tabpanel-section-title {width:100%;padding-left:0;}
+  .align-half .home-tabpanel-section-description {width:100%;margin-bottom:4rem;padding-left:0;}
+
+
+  .home-tabpanel-section-inner > div {margin-left:auto;margin-right:auto;position:relative !important;}
 
   .footer-inner {display:block;}
   .footer-socials {margin:2rem 0 0 -1rem;}
