--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,6 +88,7 @@ button {
 .home-tabpanel-section-inner {max-width:var(--width-large);margin:0 auto;padding:18rem var(--grid-margin);position:relative;}
 .home-tabpanel-section-title {margin:0 0 1.5rem 0;font-size:var(--title);opacity:0;}
 .home-tabpanel-section-description {opacity:0;}
+.home-tabpanel-section-media {opacity:0;}
 .home-tabpanel-section-media video {margin:3rem 0 0 0;}
 .home-tabpanel-section-background {position:absolute;left:0;right:0;top:0;bottom:0;}
 .home-tabpanel-section-background.tab3-4 {opacity:.1;}
@@ -118,9 +119,9 @@ button {
 /* ! observer */
 
 .is-observed {}
-.is-observed .home-tabpanel-section-title {animation:fadeup .4s both;}
-.is-observed .home-tabpanel-section-description {animation:fadeup .4s .4s both;}
-.is-observed .home-tabpanel-section-media {animation:fadeup .4s 1s both;}
+.is-observed .home-tabpanel-section-title {animation:fadeup .4s forwards;}
+.is-observed .home-tabpanel-section-description {animation:fadeup .4s .4s forwards;}
+.is-observed .home-tabpanel-section-media {animation:fadeup .4s 1s forwards;}
 
 /* todo 네스팅 네이밍 너무 복잡해짐 */
 .tabpanel1-3-wrap {transition:all 20s;position:absolute;left:0;right:0;top:0;bottom:0;transform:translateX(-50%);}
@@ -152,19 +153,18 @@ button {
   }
 }
 
-/* todo important 트랜스폼 애니메이션 있느 ㄴ경우 */
-.tabpanel1-4-wrap {width:100%;max-width:582px;padding:0 2rem;box-sizing:border-box;overflow:hidden;position:absolute;}
+.tabpanel1-4-wrap {width:100%;max-width:582px;overflow:hidden;position:absolute;}
 .tabpanel1-4-wrap-inbox {height:594px;position:relative;}
-.tabpanel1-4-wrap .viewer {position: absolute;animation:test 14s ease .8s;}
+.tabpanel1-4-wrap .viewer {position: absolute;animation:test 8s linear .4s forwards;}
 
 .tabpanel1-4-wrap .question {position:relative;}
-.tabpanel1-4-wrap .question .bookmark {max-width:68px;position:absolute;right:5%;top:21%;animation:bookmark .2s linear both;}
+.tabpanel1-4-wrap .question .bookmark {max-width:68px;position:absolute;right:6.5%;animation:bookmark .2s linear both;}
 
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(1) .bookmark {animation-delay:2s;}
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(2) .bookmark {animation-delay:3s;}
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(3) .bookmark {animation-delay:5s;}
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(4) .bookmark {animation-delay:6s;}
-.is-observed .tabpanel1-4-wrap .question:nth-of-type(5) .bookmark {animation-delay:8s;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(1) .bookmark {display:none;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(2) .bookmark {top:23%;animation-delay:2s;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(3) .bookmark {top:24%;animation-delay:4s;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(4) .bookmark {top:26%;animation-delay:6s;}
+.is-observed .tabpanel1-4-wrap .question:nth-of-type(5) .bookmark {top:22%;animation-delay:8s;}
 
 .before-blur {
   height: 4rem;
@@ -214,17 +214,21 @@ button {
 
 .tabpanel3-1-1 {max-width:749px;margin:4rem auto 0;}
 
-.tabpanel3-2-wrap {margin:4rem 158px;position:relative;}
-.tabpanel3-2-1 {max-width:645px;}
-.tabpanel3-2-2 {max-width:645px;position:absolute;right:0;top:158px;}
+.tabpanel3-2-wrap {margin:4rem 158px;position:relative;animation:none !important;opacity:1;}
+.tabpanel3-2-1 {max-width:645px;opacity:0;}
+.tabpanel3-2-2 {max-width:645px;position:absolute;right:0;top:158px;opacity:0;}
 
-.tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:none !important;}
-.tabpanel3-4-1 {max-width:582px;animation:fadeup .4s 1s both;}
-.tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;animation:fadeup .4s 1.4s both;}
-.tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);animation:fadeup .4s 1.8s both;} 
+.is-observed .tabpanel3-2-1 {animation:faderight .4s 1s both;}
+.is-observed .tabpanel3-2-2 {animation:fadeleft .4s 1.4s both;}
+
+.tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:none !important;opacity:1;}
+.tabpanel3-4-1 {max-width:582px;opacity:0;}
+.tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;opacity:0;}
+.tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);opacity:0;} 
 /*  */
-.is-observed .tabpanel3-4-2 {animation-delay:1.8s;}
-.is-observed .tabpanel3-4-3 {animation-delay:1.4s;}
+.is-observed .tabpanel3-4-1 {animation:fadeup .4s 1s both;}
+.is-observed .tabpanel3-4-2 {animation:fadeup .4s 1.8s both;}
+.is-observed .tabpanel3-4-3 {animation:fadeup .4s 1.4s both;}
 
 /* todo size  % */
 .tabpanel4-1-wrap {width:100%;max-width:612px;height:586px;position:absolute;animation:none;}
@@ -233,7 +237,7 @@ button {
 .is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:20px;bottom:20px;position:1;animation:fadeup .4s 1.8s both;}
 
 
-.tabpanel4-2-wrap {display:flex;justify-content:center;margin-bottom:-24rem;transform:translateY(20rem);transition:transform .8s 1s;opacity:1;}
+.tabpanel4-2-wrap {display:flex;justify-content:center;margin:4rem 0 -24rem;transform:translateY(20rem);transition:transform .8s 1s;}
 /* 그냥 똑같이 올라오면 되는 듯 */
 .tabpanel4-2-wrap * {animation:none;}
 .tabpanel4-2-1 {width:30%;max-width:585px;}
@@ -293,13 +297,16 @@ button {
   .footer-inner {display:block;}
   .footer-socials {margin:2rem 0 0 -1rem;}
 
+  .home-tabpanel-section-inner,
+  .align-centered .home-tabpanel-section-inner {padding-top:4rem;padding-bottom:4rem;}
 
+  .tabpanel1-4-wrap,
   .tabpanel2-1-wrap,
   .tabpanel2-5-wrap,
   .tabpanel3-4-wrap,
   .tabpanel4-1-wrap {position:relative;}
 
-  
+  .footer {font-size:14px;}
 }
 
 @media (max-width:680px) {
