--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,8 +44,8 @@ button {
 .navbar {display:flex;align-items:center;justify-content:space-between;height:var(--navbar-height);padding:0 2rem;border-bottom:1px solid #fafafa;background:var(--gray0);position:fixed;left:0;right:0;top:0;z-index:8;transition:all .4s;}
 .navbar-logo {width:96px;}
 .navbar-logo img {display:block;}
-.navbar-menu {display:flex;align-items:center;margin-right:-.5rem;position:relative;}
-.navbar-menu-item {padding:0 .5rem;color:var(--gray700);position:relative;z-index:1;}
+.navbar-menu {display:flex;align-items:center;margin-right:-1rem;position:relative;}
+.navbar-menu-item {padding:0 1rem;color:var(--gray700);position:relative;z-index:1;}
 .navbar-menu-item.is-active {color:var(--gray999);font-weight:var(--weight-bold);}
 .navbar.is-fixed {position:fixed;left:0;right:0;top:0;}
 
