--- a/public/stylesheets/abstracts/keyframes.css
+++ b/public/stylesheets/abstracts/keyframes.css
@@ -19,3 +19,33 @@
 	0% {opacity:0;transform:translateX(-40px);}
 	100% {opacity:1;transform:translateX(0px);}
 }
+
+
+@keyframes hero-object1 {
+	0% {transform: translateY(0);}
+	25% {transform: translateY(30px);}
+	50% {transform: translateY(10px);}
+	75% {transform: translateY(20px);}
+	100% {transform: translateY(0px);}
+}
+
+
+@keyframes test {
+	0% {transform: translateY(0px);}
+	100% {transform: translateY(-800px);}
+}
+
+@keyframes bookmark {
+	0% {transform:scale(0)}
+	80% {transform:scale(1.1)}
+	100% {transform:scale(1)}
+}
+
+@keyframes temp {
+	0% {}
+	50% {}
+	100% {
+	  transform: translateY(160px) translateX(2560px) translateZ(-500px);
+	  /* transform: translateY(160px) translateX(2560px) translateZ(-500px) rotate3d(1, 1, .25, 720deg); */
+	}
+}
