feat: donut graph

--- a/public/stylesheets/abstracts/variables.css
+++ b/public/stylesheets/abstracts/variables.css
@@ -17,6 +17,8 @@
   --blue100: #f8fcff;
   --blue300: #00abff;
   --blue400: #1a8ef9;
+  --red400: #fd5354;
+  --green100: #54c0b1;
   --navy: #052e53;
   --yellow: #ffa825;
 
