--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,11 +38,12 @@ button {
 }
 
 :root {
+  --animation-duration: .5s;
   --animation-delay-second: .8s;
   --animation-delay-third: .8s;
 }
 
-.navbar {display:flex;align-items:center;justify-content:space-between;height:var(--navbar-height);padding:0 2rem;border-bottom:1px solid #fafafa;background:var(--gray0);position:fixed;left:0;right:0;top:0;z-index:8;transition:all .4s;}
+.navbar {display:flex;align-items:center;justify-content:space-between;height:var(--navbar-height);padding:0 2rem;border-bottom:1px solid #fafafa;background:var(--gray0);position:fixed;left:0;right:0;top:0;z-index:8;transition:all var(--animation-duration);}
 .navbar-logo {width:96px;}
 .navbar-logo img {display:block;}
 .navbar-menu {display:flex;align-items:center;margin-right:-1rem;position:relative;}
@@ -59,8 +60,14 @@ button {
 
 .hero {background:var(--blue100);position:relative;}
 .hero-inner {max-width:var(--width-large);margin:0 auto;padding:14rem var(--grid-margin);position: relative;}
+
 .hero-title {margin:0 0 2rem 0;font-size:2.5rem;}
 .hero-description {}
+
+.is-observed .hero-title {animation:fadeup var(--animation-duration) both;}
+.is-observed .hero-description {animation:fadeup var(--animation-duration) .6s both;}
+.is-observed .hero-cta {animation:fadeup var(--animation-duration) 1s both;}
+
 .hero-cta {display:flex;align-items:center;justify-content:center;width:241px;height:45px;margin:2rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
 
 .hero-object-group {height:100%;position:absolute;right:-4rem;top:-8rem;}
@@ -76,7 +83,7 @@ button {
 .home-cta-button {display:flex;align-items:center;justify-content:center;width:100%;max-width:687px;height:45px;margin:2rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
 .home-cta.is-fixed {transform:translateY(0);opacity:1;}
 
-.home-tablist {background:var(--gray0);position:absolute;left:0;right:0;z-index:2;transition:all .4s;}
+.home-tablist {background:var(--gray0);position:absolute;left:0;right:0;z-index:2;transition:all var(--animation-duration);}
 .home-tablist-inner {display:flex;justify-content:center;max-width:var(--width-large);margin:0 auto;}
 .home-tablist-tab {width:20%;padding:1rem 0;border-bottom:4px solid transparent;}
 .home-tablist-tab small {display:block;color:var(--gray600);}
@@ -109,9 +116,9 @@ button {
 
 /* ! observer */
 .is-observed {}
-.is-observed .home-tabpanel-section-title {animation:fadeup .4s forwards;}
-.is-observed .home-tabpanel-section-description {animation:fadeup .4s .4s forwards;}
-.is-observed .home-tabpanel-section-media {animation:fadeup .4s 1s forwards;}
+.is-observed .home-tabpanel-section-title {animation:fadeup var(--animation-duration) forwards;}
+.is-observed .home-tabpanel-section-description {animation:fadeup var(--animation-duration) var(--animation-duration) forwards;}
+.is-observed .home-tabpanel-section-media {animation:fadeup var(--animation-duration) 1s forwards;}
 
 .tabpanel1-3-wrap {}
 .tabpanel1-3-o {max-width:14px;margin:6rem;opacity:1;}
@@ -145,11 +152,13 @@ button {
 
 .tabpanel1-4-wrap {width:100%;max-width:582px;overflow:hidden;position:absolute;}
 .tabpanel1-4-wrap-inbox {height:594px;position:relative;}
-.tabpanel1-4-wrap .viewer {position: absolute;animation:test 8s linear .4s forwards;}
+.tabpanel1-4-wrap .viewer {position: absolute;}
 
 .tabpanel1-4-wrap .question {position:relative;}
-.tabpanel1-4-wrap .question .bookmark {max-width:82px;position:absolute;right:5.2%;animation:bookmark .2s linear both;}
+.tabpanel1-4-wrap .question .bookmark {max-width:82px;position:absolute;right:5.2%;}
 
+.is-observed  .tabpanel1-4-wrap .viewer {animation:test 8s linear var(--animation-duration) forwards;}
+.is-observed  .question .bookmark {animation:bookmark .2s linear both;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(1) .bookmark {display:none;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(2) .bookmark {top:21.5%;animation-delay:2s;}
 .is-observed .tabpanel1-4-wrap .question:nth-of-type(3) .bookmark {top:22.5%;animation-delay:4s;}
@@ -178,18 +187,18 @@ button {
 
 /*  todo 왼쪽 정렬 absolute */
 .tabpanel2-1-wrap {position:absolute;animation:none !important;opacity:1;}
-.tabpanel2-1-1 {max-width:530px;position:absolute;left:10px;top:10px;transition:all .4s;transform:scale(.5);opacity:0;}
-.tabpanel2-1-2 {max-width:550px;transition:all .4s;transform:scale(.2);opacity:0;}
+.tabpanel2-1-1 {max-width:530px;position:absolute;left:10px;top:10px;transition:all var(--animation-duration);transform:scale(.5);opacity:0;}
+.tabpanel2-1-2 {max-width:550px;transition:all var(--animation-duration);transform:scale(.2);opacity:0;}
 .is-observed .tabpanel2-1-1 {opacity:1;transform:scale(1);transition-delay:1s;}
 .is-observed .tabpanel2-1-2 {opacity:1;transform:scale(1);transition-delay:1.3s;}
 
 .tabpanel2-2-1 {max-width:560px;position:absolute;}
 
 .tabpanel2-5-wrap {position:absolute;animation:none !important;}
-.tabpanel2-5-1 {margin:2.5rem 0 0 2rem;position:absolute;z-index:1;animation:fadeup .4s 1s both;animation-delay:1.8s;}
-.tabpanel2-5-2 {max-width:533px;transition:all .4s;opacity:0;}
+.tabpanel2-5-1 {margin:2.5rem 0 0 2rem;position:absolute;z-index:1;animation:fadeup var(--animation-duration) 1s both;animation-delay:1.8s;}
+.tabpanel2-5-2 {max-width:533px;transition:all var(--animation-duration);opacity:0;}
 .is-observed .tabpanel2-5-1 {}
-.is-observed .tabpanel2-5-2 {transition-delay:1.4s;opacity:.2;}
+.is-observed .tabpanel2-5-2 {transition-delay:1var(--animation-duration);opacity:.2;}
 
 .tabpanel3-1-1 {max-width:749px;margin:4rem auto 0;}
 
@@ -197,23 +206,23 @@ button {
 .tabpanel3-2-1 {max-width:645px;opacity:0;}
 .tabpanel3-2-2 {max-width:645px;position:absolute;right:0;top:158px;opacity:0;}
 
-.is-observed .tabpanel3-2-1 {animation:faderight .4s 1s both;}
-.is-observed .tabpanel3-2-2 {animation:fadeleft .4s 1.4s both;}
+.is-observed .tabpanel3-2-1 {animation:faderight var(--animation-duration) 1s both;}
+.is-observed .tabpanel3-2-2 {animation:fadeleft var(--animation-duration) 1var(--animation-duration) both;}
 
 .tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:none !important;opacity:1;}
 .tabpanel3-4-1 {max-width:582px;opacity:0;}
 .tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;opacity:0;}
 .tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);opacity:0;} 
 /*  */
-.is-observed .tabpanel3-4-1 {animation:fadeup .4s 1s both;}
-.is-observed .tabpanel3-4-2 {animation:fadeup .4s 1.8s both;}
-.is-observed .tabpanel3-4-3 {animation:fadeup .4s 1.4s both;}
+.is-observed .tabpanel3-4-1 {animation:fadeup var(--animation-duration) 1s both;}
+.is-observed .tabpanel3-4-2 {animation:fadeup var(--animation-duration) 1.8s both;}
+.is-observed .tabpanel3-4-3 {animation:fadeup var(--animation-duration) 1var(--animation-duration) both;}
 
 /* todo size  % */
 .tabpanel4-1-wrap {width:100%;max-width:612px;height:586px;position:absolute;animation:none;}
 .is-observed .tabpanel4-1-1 {max-width:271px;position:absolute;left:0;top:0;position:2;}
-.is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;position:3;animation:fadeup .4s 1.4s both;}
-.is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:20px;bottom:20px;position:1;animation:fadeup .4s 1.8s both;}
+.is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;position:3;animation:fadeup var(--animation-duration) 1var(--animation-duration) both;}
+.is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:20px;bottom:20px;position:1;animation:fadeup var(--animation-duration) 1.8s both;}
 
 
 .tabpanel4-2-wrap {display:flex;justify-content:center;margin:4rem 0 -24rem;transform:translateY(20rem);transition:transform .8s 1s;}
