--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,7 @@ iframe,img,video {width:100%;} /*img {vertical-align:middle;}*/
 h1,h2,h3,h4,h5,h6 {line-height:1.4;font-weight:bold;color:var(--gray800);word-break:keep-all;}
 strong,b,th,legend {font-weight:bold;color:var(--gray800);}
 em {font-style:normal;color:var(--color-primary);}
+address {font-style:normal;}
 small {} 
 a {text-decoration:none;text-decoration-skip-ink:auto;color:var(--color-primary);} a:link,a:visited {} a:hover,a:focus {} a:active {}
 /* // br {content:'';display:block;height:1rem;} */
@@ -63,6 +64,7 @@ button {
 
 .hero-title {margin:0 0 2rem 0;font-size:2.5rem;}
 .hero-description {}
+
 
 .is-observed .hero-title {animation:fadeup var(--animation-duration) both;}
 .is-observed .hero-description {animation:fadeup var(--animation-duration) .6s both;}
